centers and corrects spacing

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -54,6 +54,13 @@ body {
     height: 35px;
 }
 
+.text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
@@ -69,7 +76,7 @@ body {
 .heading-primary-sub {
     display: block;
     font-size: 20px;
-    font-weight: 400;
-    letter-spacing: 15px;
+    font-weight: 700;
+    letter-spacing: 17.4px;
 }
 
